<?xml version="1.0"?>
<package format="3">
  <name>aws_robomaker_small_warehouse_world</name>
  <version>1.0.5</version>
  <description>
    AWS RoboMaker package for a warehouse world to use in manufacturing and logistics robot applications.
  </description>
  <license>MIT-0</license>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
